--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,12 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:birthdayview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.eftimoff.birthdayview.BirthdayView
+        birthdayview:imageResourceId="@drawable/ic_launcher"
+        birthdayview:dividerWidth="1dp"
+        android:background="@android:color/white"
+        birthdayview:dividerColor="@android:color/holo_green_dark"
+        birthdayview:innerPadding="20dp"
+        birthdayview:titleText="Hello what is going on here"
+        android:layout_width="match_parent"
+        android:layout_height="64dp" />
 
 </RelativeLayout>
