--- a/android-birthday-view/src/main/res/layout/view_birthday.xml
+++ b/android-birthday-view/src/main/res/layout/view_birthday.xml
@@ -1,26 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:padding="10dp"
     android:background="@android:color/white"
     android:gravity="center_vertical"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:src="@android:drawable/alert_dark_frame"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="Image"
+        android:id="@+id/image"
+        tools:src="@android:drawable/alert_dark_frame"
         android:layout_width="20dp"
-        android:layout_height="20dp" />
+        android:layout_height="20dp"
+        tools:ignore="HardcodedText" />
 
     <View
-        android:background="@android:color/black"
+        android:id="@+id/divider"
+        tools:background="@android:color/black"
         android:layout_width="1dp"
         android:layout_height="match_parent" />
 
-    <TextView
-        android:gravity="center_vertical"
-        android:text="ASD"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/title"
+            android:gravity="center_vertical"
+            tools:text="ASD"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <EditText
+                android:visibility="gone"
+                android:gravity="center"
+                android:hint="@string/date"
+                android:maxLength="2"
+                android:id="@+id/day"
+                android:background="@android:color/transparent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:inputType="number" />
+
+            <View
+                android:visibility="gone"
+                android:id="@+id/firstDivider"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                tools:background="@android:color/black"
+                android:layout_width="1dp"
+                android:layout_height="match_parent" />
+
+            <EditText
+                android:visibility="gone"
+                android:gravity="center"
+                android:hint="@string/month"
+                android:maxLength="2"
+                android:id="@+id/month"
+                android:inputType="number"
+                android:background="@android:color/transparent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <View
+                android:visibility="gone"
+                android:id="@+id/secondtDivider"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                tools:background="@android:color/black"
+                android:layout_width="1dp"
+                android:layout_height="match_parent" />
+
+            <EditText
+                android:visibility="gone"
+                android:gravity="center"
+                android:hint="@string/year"
+                android:maxLength="4"
+                android:id="@+id/year"
+                android:inputType="number"
+                android:background="@android:color/transparent"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
