--- a/android-birthday-view/src/main/res/values/attrs.xml
+++ b/android-birthday-view/src/main/res/values/attrs.xml
@@ -2,9 +2,8 @@
 <resources>
     <declare-styleable name="BirthdayView">
         <attr name="imageResourceId" format="reference" />
-        <attr name="dividerWidth" format="dimension" />
+        <attr name="dividerMargin" format="dimension" />
         <attr name="dividerColor" format="color" />
-        <attr name="innerPadding" format="dimension" />
         <attr name="titleText" format="string" />
         <attr name="textColor" format="color" />
         <attr name="textSize" format="dimension" />
